add changes to trees and linked list

--- a/LinkedList.ipynb
+++ b/LinkedList.ipynb
@@ -4,14 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There isn't a built-in data structure in Python that looks like a linked list. Thankfully, it's easy to make classes that represent data structures in Python!\n",
-    "\n",
-    "Here's the code for an Node, which will be a single unit in a linked list:"
+    "# Singly Linked List"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,12 +23,16 @@
     "        self.head = head\n",
     "\n",
     "    def deleteNode(self, node):\n",
-    "        if node == None:\n",
-    "            return None     \n",
+    "        head = self.head\n",
     "        if node.next:\n",
     "            node.value = node.next.value\n",
     "            node.next = node.next.next\n",
-    "        return\n",
+    "        else:\n",
+    "            while head.next:\n",
+    "                curr = head\n",
+    "                head = head.next\n",
+    "            node = None\n",
+    "            curr.next = node\n",
     "    \n",
     "    def append(self, new_node):\n",
     "        current = self.head\n",
@@ -55,7 +57,19 @@
     "        while head:\n",
     "            print(head.value)\n",
     "            head = head.next\n",
-    "            \n",
+    "\n",
+    "    def removeNthFromEnd(self, head, n: int):\n",
+    "        def helper(head):\n",
+    "            if head is None:\n",
+    "                return 0\n",
+    "            else:\n",
+    "                cnt = helper(head.next) + 1\n",
+    "                if cnt > n:\n",
+    "                    head.next.value = head.value                \n",
+    "                return cnt\n",
+    "        helper(head)\n",
+    "        self.head =  head.next\n",
+    "\n",
     "    def __repr__(self):\n",
     "        node = self.head\n",
     "        nodes = []\n",
@@ -68,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,18 +105,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "1 -> 3 -> None"
-      ]
+      "text/plain": "1 -> 2 -> 3 -> None"
      },
-     "execution_count": 22,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 199
+    }
+   ],
+   "source": [
+    "llist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Remove Nth From the End"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llist.removeNthFromEnd(llist.head, n=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "1 -> 2 -> None"
+     },
+     "metadata": {},
+     "execution_count": 201
+    }
+   ],
+   "source": [
+    "llist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Delete Node"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "2 -> None"
+     },
+     "metadata": {},
+     "execution_count": 202
     }
    ],
    "source": [
@@ -111,19 +182,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Append Node"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "1 -> 3 -> 4 -> None"
-      ]
+      "text/plain": "2 -> 4 -> None"
      },
-     "execution_count": 23,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 203
     }
    ],
    "source": [
@@ -133,22 +209,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "4 -> 3 -> 1 -> None"
-      ]
+      "text/plain": "2 -> None"
      },
-     "execution_count": 24,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 204
     }
    ],
    "source": [
-    "llist.reverse_list(llist.head)\n",
+    "llist.deleteNode(fourth)\n",
+    "llist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fifth = Node(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llist.append(fifth)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "2 -> 5 -> None"
+     },
+     "metadata": {},
+     "execution_count": 207
+    }
+   ],
+   "source": [
+    "llist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reverse List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llist.reverse_list(llist.head)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "5 -> 2 -> None"
+     },
+     "metadata": {},
+     "execution_count": 209
+    }
+   ],
+   "source": [
     "llist"
    ]
   },
@@ -162,9 +306,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.6 64-bit ('base': conda)",
    "language": "python",
-   "name": "python3"
+   "name": "python37664bitbasecondac0dbb9d95a27497da78ccc98a87642eb"
   },
   "language_info": {
    "codemirror_mode": {
@@ -176,7 +320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.6-final"
   }
  },
  "nbformat": 4,
