--- a/trees.ipynb
+++ b/trees.ipynb
@@ -9,12 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Node(object):\n",
-    "    def __init__(self, value):\n",
+    "    def __init__(self, value): \n",
     "        self.value = value\n",
     "        self.left = None\n",
     "        self.right = None    "
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,12 +65,21 @@
     "        else:\n",
     "            cntL = self.maxDepth(current.left)\n",
     "            cntR = self.maxDepth(current.right)\n",
-    "            return max(cntR, cntL) + 1"
+    "            return max(cntR, cntL) + 1\n",
+    "        \n",
+    "    def symmetric_tree(self, root):\n",
+    "        def helper(L, R):\n",
+    "            if not L or not R:\n",
+    "                return True\n",
+    "            if L and R and L.value == R.value:\n",
+    "                return helper(L.left, R.right) and helper(L.right, R.left)\n",
+    "            return False\n",
+    "        return helper(root, root)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,16 +107,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "False"
+      "text/plain": [
+       "False"
+      ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "execution_count": 68
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -123,20 +134,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "5"
+      "text/plain": [
+       "4"
+      ]
      },
+     "execution_count": 6,
      "metadata": {},
-     "execution_count": 69
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "tree.maxDepth(tree.root)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Symmetric Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tree.symmetric_tree(tree.root)"
    ]
   },
   {
@@ -163,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3-final"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
